testing/tests/ui/fuzzing.stderr
error: failed to parse template source
 --> <source attribute>:1:4
       "{Ւ{"
 --> tests/ui/fuzzing.rs:7:14
  |
7 |     source = r#"{{..{Ւ{"#,
  |              ^^^^^^^^^^^^
